# nlp-entity-recognition

./: .gitignore  README.md  pyproject.toml
model/ner/: moves
notebooks/: Named Entity Recognition Project.ipynb
