[tool.poetry]
name = "nlp-entity-recognition"
version = "0.1.0"
description = ""
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
spacy = "^3.8.4"
setuptools = "^78.1.0"
wheel = "^0.45.1"
pandas = "^2.2.3"
streamlit = "^1.44.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
